支持OpType通过EventProcessor修改